--- a/package.json
+++ b/package.json
@@ -1,38 +1,50 @@
 {
-    "name": "terminal.js"
-  , "version": "0.1.1"
-  , "author": "Enno Boland <eb@s01.de>"
-  , "description": "terminal emulation library for javascript."
-  , "private": false
-  , "scripts": {
-      "install": "make BROWSERIFY=browserify UGLIFY=uglify"
-    , "prepublish": "make BROWSERIFY=browserify UGLIFY=uglify"
-    , "test": "make MOCHA=mocha JSHINT=jshint test"
-  }
-  , "main": "./index"
-  , "repository": {
-      "type": "git"
-    , "url": "https://github.com/c3ks/terminal.js.git"
-  }
-  , "keywords": [
-      "vt100"
-    , "xterm"
-    , "vt"
-    , "terminal"
-  ]
-  , "dependencies": {
-      "browserify": "2.13.x"
-    , "uglify-js": "*"
-  }
-  , "devDependencies": {
-      "mocha": "*"
-    , "jscoverage": "*"
-    , "should": "0.5.1"
-    , "expect.js": "*"
-    , "jshint": "*"
-  }
-  , "license": "MIT"
-  , "engine": {
+  "name": "vt",
+  "version": "0.1.1",
+  "author": "Enno Boland <eb@s01.de>",
+  "contributors": [
+    "Thai Pangsakulyanont <org.yi.dttvb@gmail.com>"
+  ],
+  "description": "terminal emulation library for javascript.",
+  "private": false,
+  "scripts": {
+    "test": "make MOCHA=mocha JSHINT=jshint test"
+  },
+  "main": "./index",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dtinth/vt.git"
+  },
+  "keywords": [
+    "vt100",
+    "xterm",
+    "vt",
+    "terminal"
+  ],
+  "dependencies": {
+  },
+  "devDependencies": {
+    "mocha": "*",
+    "jscoverage": "*",
+    "should": "0.5.1",
+    "expect.js": "*",
+    "jshint": "*",
+    "karma-chrome-launcher": "~0.1.2",
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-script-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.5",
+    "karma-coffee-preprocessor": "~0.1.2",
+    "requirejs": "~2.1.10",
+    "karma-requirejs": "~0.2.1",
+    "karma-phantomjs-launcher": "~0.1.2",
+    "karma": "~0.10.9",
+    "karma-mocha": "~0.1.1",
+    "karma-browserify": "0.0.6",
+    "karma-commonjs": "0.0.6"
+  },
+  "license": "MIT",
+  "engine": {
     "node": ">=0.6"
   }
 }
